logs/Slang/chapter-8/8.12--assignment.sv.log
name: assignment
description: object assignment
should_fail: 0
tags: 8.12
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.12--assignment.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.12--assignment.sv:8:2: error: language feature not yet supported
	class test_cls;
	^~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.12--assignment.sv:16:2: error: use of undeclared identifier 'test_cls'
	test_cls test_obj0;
	^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.12--assignment.sv:17:2: error: use of undeclared identifier 'test_cls'
	test_cls test_obj1;
	^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.12--assignment.sv:20:15: error: language feature not yet supported
		test_obj0 = new;
		            ^~~
